what the hell have i done? set up a theme for the menu button, tinkered to get it how the tutor wanted it and pretended what they said made sense... great.

--- a/ModernDesign_CSharp/MainWindow.xaml
+++ b/ModernDesign_CSharp/MainWindow.xaml
@@ -31,6 +31,28 @@
                        FontSize="22"
                        Margin="20,0,0,0"/>
 
+            <StackPanel Grid.Row="1">
+
+                <RadioButton Content="Home"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Style="{StaticResource MenuButtonTheme}"/>
+
+                <RadioButton Content="Discovery"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Style="{StaticResource MenuButtonTheme}"/>
+
+                <RadioButton Content="Featured"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Style="{StaticResource MenuButtonTheme}"/>
+
+            </StackPanel>
+
         </Grid>
     </Border>
 </Window>
